--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -1,6 +1,6 @@
 .cartContainer {
-  margin: 5rem 0;
-  padding-bottom: 2rem;
+  padding: 5rem 0 2rem;
+  /* padding-bottom: 2rem; */
 }
 
 .pageTitle {
