--- a/src/pages/Products/Products.module.css
+++ b/src/pages/Products/Products.module.css
@@ -13,7 +13,6 @@
 .container {
   margin: 5rem 0;
   display: grid;
-  padding: 0 2vw;
   grid-template-columns: repeat(2, 1fr);
   /* row-gap: 2rem; */
 }
