--- a/src/pages/Products/components/ProductCard.module.css
+++ b/src/pages/Products/components/ProductCard.module.css
@@ -12,7 +12,7 @@
 */
 
 .cardOverride {
-  width: 48vw;
+  width: 100%;
   z-index: 1;
   box-shadow: none;
   border-radius: 0;
