--- a/src/pages/Products/components/ProductOperations.module.css
+++ b/src/pages/Products/components/ProductOperations.module.css
@@ -35,7 +35,6 @@
   text-transform: none;
   padding: 1.5rem 2rem;
   border-top: 1px solid #d7d7d7;
-  /* box-shadow: 0 0 0 100vh rgb(0 0 0 / 50%); */
 }
 
 .sortModal {
@@ -88,6 +87,8 @@
   background-color: black;
   color: white;
   border-radius: 50%;
+  height: 2.5rem;
+  width: 2.5rem;
 }
 
 .modal span svg {
